force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aktiv</fullName>
            </value>
            <value>
                <fullName>100% Utilized</fullName>
            </value>
            <value>
                <fullName>50% Utilized</fullName>
            </value>
            <value>
                <fullName>On Bench</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Inaktiv</fullName>
                <isActive>false</isActive>
                <label>Inaktiv</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>