force-app/main/default/objects/Account/fields/AgentBlazer_Rank__c.field-meta.xml
<CustomField>
    <fullName>AgentBlazer_Rank__c</fullName>
    <label>AgentBlazer Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>Innovater</fullName>
            </value>
            <value>
                <fullName>Legend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>