force-app/main/default/objects/Account/fields/Current_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Current_Allocation__c</fullName>
    <label>Current Allocation %</label>
    <summarizedField>Project_Assignment__c.Allocation__c</summarizedField>
    <summaryFilterItems>
        <field>Project_Assignment__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Assignment__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>