force-app/main/default/objects/Account/fields/LinkedIn_Profile_Link__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profile_Link__c</fullName>
    <label>LinkedIn Profile Link</label>
    <type>Url</type>
</CustomField>