force-app/main/default/objects/Account/fields/SF_Experience_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SF_Experience_Start_Date__c</fullName>
    <label>SF Experience Start Date</label>
    <type>Date</type>
</CustomField>