force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
    Current_Allocation__c = 0,
    &quot;On Bench&quot;,
    IF(
        Current_Allocation__c = 1,
        &quot;Fully Utilized&quot;,
        IF(
            AND(Current_Allocation__c &gt; 0, Current_Allocation__c &lt; 1),
            &quot;Partially Utilized&quot;,
            NULL
        )
    )
)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>