force-app/main/default/objects/Account/fields/Total_Years_of_SF_Experience__c.field-meta.xml
<CustomField>
    <fullName>Total_Years_of_SF_Experience__c</fullName>
    <formula>(YEAR(TODAY()) - YEAR(SF_Experience_Start_Date__c))
- 
IF(
    DATE(
        YEAR(TODAY()),
        MONTH(SF_Experience_Start_Date__c),
        DAY(SF_Experience_Start_Date__c)
    ) &gt; TODAY(),
    1,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Years of SF Experience</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>