force-app/main/default/objects/Account/fields/Trailblazer_Profile_Link__c.field-meta.xml
<CustomField>
    <fullName>Trailblazer_Profile_Link__c</fullName>
    <label>Trailblazer Profile Link</label>
    <type>Url</type>
</CustomField>