force-app/main/default/objects/Account/fields/Trailblazer_Rank__c.field-meta.xml
<CustomField>
    <fullName>Trailblazer_Rank__c</fullName>
    <label>Trailblazer Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scout</fullName>
            </value>
            <value>
                <fullName>Hiker</fullName>
            </value>
            <value>
                <fullName>Explorer</fullName>
            </value>
            <value>
                <fullName>Adventurer</fullName>
            </value>
            <value>
                <fullName>Mountaineer</fullName>
            </value>
            <value>
                <fullName>Expeditioner</fullName>
            </value>
            <value>
                <fullName>Ranger</fullName>
            </value>
            <value>
                <fullName>Double Star Ranger</fullName>
            </value>
            <value>
                <fullName>Triple Star Ranger</fullName>
            </value>
            <value>
                <fullName>Four Star Ranger</fullName>
            </value>
            <value>
                <fullName>Five Star Ranger</fullName>
            </value>
            <value>
                <fullName>All Star Ranger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>